fixed z-index issues

--- a/styles/FormState/FormLoading.module.css
+++ b/styles/FormState/FormLoading.module.css
@@ -8,7 +8,7 @@
 	width: 100%;
 	background-color: rgb(255, 255, 255);
 	background-color: rgba(255, 255, 255, 0.7);
-	z-index: 99999;
+	z-index: 1;
 	/* pointer-events: none; */
 }
 
