--- a/styles/ProfileSettings/EditProfileForm.module.css
+++ b/styles/ProfileSettings/EditProfileForm.module.css
@@ -4,7 +4,6 @@
 	align-items: center;
 	max-width: 400px;
 	width: 100%;
-	padding-bottom: 2rem;
 }
 
 .changeImages,
